Containers/Kubernetes/K8S-training/resources/mariadb-persitence.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
        tier: database
    spec:
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
      - name: mariadb
        image: bitnami/mariadb:latest
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /bitnami/mariadb
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mariadb-data
