Containers/Kubernetes/K8S-training/resources/mongo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo
spec:
  containers:
  - image: bitnami/mongodb
    name: mongo
