Containers/Kubernetes/K8S-training/resources/mysql-with-cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
spec:
  containers:
  - name: mysql
    image: bitnami/mysql
