Containers/Kubernetes/K8S-training/resources/php-fpm.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: php-fpm
  name: php-fpm
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: php-fpm
    spec:
      containers:
      - name: php-fpm
        image: bitnami/php-fpm:7.0
        volumeMounts:
        - name: config
          mountPath: /app
      - name: nginx
        image: bitnami/nginx
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /bitnami/nginx/conf/vhosts
      volumes:
      - name: config
        configMap: 
          name: my-php-fpm-config
---
