Containers/Kubernetes/K8S-training/resources/share-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: share-volume
spec:
  containers:
  - name: busy
    image: busybox
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo 'hello buddy!' > /busy/file.txt ; sleep 10;done"]
    volumeMounts:
    - mountPath: /busy
      name: test
  - name: box
    image: busybox
    command: ["/bin/sh"]
    args: ["-c", "while true; do cat /box/file.txt; sleep 10;done"]
    volumeMounts:
    - mountPath: /box
      name: test
  volumes:
  - name: test
    emptyDir: {}
